[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
# rusty-leveldb = "0.3.6"
leveldb = "0.8"
db-key = "0.0.5"
warp = "0.3.2"
tokio = {version = "1",features = ["fs", "sync", "time","macros","rt-multi-thread","process"]}
log = "0.4"
log4rs = {version = "1.0"}
serde = {version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
flatbuffers = "2"
http = "0.2"
# cached = "0.23"
ttl_cache = "0.5.1"
local_ipaddress = "0.1.3"
bytes = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json","stream","native-tls"] }
ringbuffer = "0.8.4"
dashmap = "5.3.4"
tempfile = "3.0.7"
[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1