[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusty-leveldb = "0.3.6"
leveldb = "0.8"
db-key = "0.0.5"
warp = "0.3.2"
tokio = {version = "1",features = ["full"]}
log = "0.4"
log4rs = {version = "1.0"}
serde = {version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
flatbuffers = "2"
#http = "0.2"
#cached = "0.23"
#ttl_cache = "0.5.1"
local_ipaddress = "0.1.3"
bytes = "1.0"
ringbuffer = "0.8.4"
dashmap = {version = "5.3.4", features = ["rayon", "raw-api"]}
#tempfile = "3.0.7"
jemallocator = "0.5"
fasthash = "0.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = ["json","stream","native-tls", "blocking"] }
fs_extra = "1.2.0"
smol_str = "0.1.23"

[dev-dependencies]
chrono="0.4.19"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
codegen-units = 1
